--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/styles.css" />
     <title>Fernando Gamino</title>
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
   </head>
   <body>
     <div class="flex-container">
