--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             class="fab fa-instagram icon"
             target="_blank"
           ></a>
-          <a href="#" class="far fa-envelope icon" target="_blank"></a>
+          <a href="#" class="far fa-envelope icon"></a>
         </div>
       </div>
       <div class="flex-item info-section">
