--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           alt="Guy with sunglasses on"
         />
         <div class="name-section">
-          <h1 class="main-name">Fernando Gamino</h1>
+          <h1 class="main-name">Fernando Gamiño</h1>
           <p class="main-title">Artistic Creative</p>
         </div>
         <div class="social-media">
