added new coming soon pages travel, plants and text overlay

--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
   <body>
     <div class="flex-container">
       <div class="flex-item img-section">
-        <img
-          class="main-img"
-          src="/images/fernandoMain.jpg"
-          alt="Guy with sunglasses on"
-        />
+        <div class="container">
+          <img
+            class="main-img"
+            src="/images/fernandoMain.jpg"
+            alt="Fernando with sunglasses on"
+          />
+          <div class="centered fade centered-text">Hello</div>
+          <div class="centered-mid fade centered-text">I'm</div>
+          <div class="centered-low fade centered-text">Fernando</div>
+        </div>
         <div class="name-section">
           <h1 class="main-name">Fernando Gamiño</h1>
           <p class="main-title">Artistic Creative</p>
@@ -47,11 +52,14 @@
       </div>
       <div class="flex-item info-section">
         <div class="button-section">
-          <a class="btn plants" href="/soon.html">Plants</a>
-          <a class="btn travels" href="/soon.html">Travels</a>
+          <a class="btn plants" href="/comingSoon.html">Plants</a>
+          <a class="btn travels" href="/coming.html">Travels</a>
           <a class="btn lifestyle" href="/soon.html">Lifestyle</a>
         </div>
       </div>
     </div>
+    <footer>
+      made by <a href="https://ricksoria.com" target="__blank">ricksoria</a>
+    </footer>
   </body>
 </html>
