removed over pic lettering and added animation

--- a/index.html
+++ b/index.html
@@ -22,16 +22,12 @@
   <body>
     <div class="flex-container">
       <div class="flex-item img-section">
-        <div class="container">
-          <img
-            class="main-img"
-            src="/images/fernandoMain.jpg"
-            alt="Fernando with sunglasses on"
-          />
-          <div class="centered fade centered-text">Hello</div>
-          <div class="centered-mid fade centered-text">I'm</div>
-          <div class="centered-low fade centered-text">Fernando</div>
-        </div>
+        <img
+          class="main-img animate-top"
+          src="/images/fernandoMain.jpg"
+          alt="Fernando with sunglasses on"
+        />
+
         <div class="name-section">
           <h1 class="main-name">Fernando Gamiño</h1>
           <p class="main-title">Artistic Creative</p>
