--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
 
         <div class="about-column-text">
           <p class="about-text">
-            <span class="big-about-text">Hello, I'm Fernando </span> some people
-            call me "Fer". I like to plant and paint. I Have a vision of peace
-            for the world.
+            <span class="big-about-text">Hello, I'm Fernando </span> a biligual
+            artistic creative.
           </p>
         </div>
       </div>
