added contact form

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 
   <body>
     <section id="header-section">
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+          >&times;</a
+        >
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="/contactForm/contact.html">Contact</a>
+      </div>
+      <span class="nav-text" onclick="openNav()">&#9776; Open</span>
       <div class="main-header">
         <h1 class="header-text animate-top">
           Hello<br />
@@ -47,6 +57,22 @@
             <span class="big-about-text">Hello, I'm Fernando </span> a biligual
             artistic creative.
           </p>
+          <div class="social-media">
+            <a
+              href="http://Www.Fb.com/fernandogw"
+              class="fab fa-facebook-f icon"
+              target="_blank"
+            ></a>
+            <a
+              href="http://Instagram.com/fernanddo21"
+              class="fab fa-instagram icon"
+              target="_blank"
+            ></a>
+            <a
+              href="/contactForm/contact.html"
+              class="far fa-envelope icon"
+            ></a>
+          </div>
         </div>
       </div>
     </section>
@@ -115,7 +141,10 @@
     </section>
     <!-- INTEREST END -->
     <footer>
-      made by <a href="https://ricksoria.com" target="__blank">ricksoria</a>
+      &copy;FernandoGamino 2021 made by
+      <a href="https://ricksoria.com" target="__blank">ricksoria</a>
     </footer>
+    <!-- JAVASCRIPT -->
+    <script src="/script.js"></script>
   </body>
 </html>
