updated nav bar

--- a/contactForm/contact.html
+++ b/contactForm/contact.html
@@ -42,7 +42,7 @@
         <div class="contact-form">
           <form
             id="contact-form"
-            action="https://formspree.io/f/xnqlpvol"
+            action="https://formspree.io/f/xoqyddlb"
             method="POST"
           >
             <input
