--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
         >
+        <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Services</a>
-        <a href="#">Clients</a>
         <a href="/contactForm/contact.html">Contact</a>
       </div>
       <span class="nav-text" onclick="openNav()">&#9776; Open</span>
