updated nav bar

--- a/contactForm/contact.html
+++ b/contactForm/contact.html
@@ -31,7 +31,7 @@
       <a href="#">Services</a>
       <a href="/contactForm/contact.html">Contact</a>
     </div>
-    <span class="nav-text" onclick="openNav()">&#9776; Open</span>
+    <span class="nav-text" onclick="openNav()">&#9776;</span>
     <section class="container">
       <div class="contact-section">
         <div class="contact-title">
