--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="#">Services</a>
         <a href="/contactForm/contact.html">Contact</a>
       </div>
-      <span class="nav-text" onclick="openNav()">&#9776; Open</span>
+      <span class="nav-text" onclick="openNav()">&#9776;</span>
       <div class="main-header">
         <h1 class="header-text animate-top">
           Hello<br />
