--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h3 class="card-text cursive-font">Tequila</h3>
             <p class="offer-text">
               Well versed in many styles of tequila, and ready to elevate your
-              knowlage and pallete.
+              knowledge and palate.
             </p>
             <!-- <div class="btn-container">
               <a class="btn project-btn" href="/soon.html"> View </a>
@@ -117,7 +117,7 @@
             <h3 class="card-text cursive-font">Mezcal</h3>
             <p class="offer-text">
               Mezcal is simailar to tequila, but the added smokey notes really
-              bring out a spirit like non other.
+              bring out a spirit like none other.
             </p>
             <!-- <div class="btn-container">
               <a class="btn project-btn" href="/coming.html"> View </a>
@@ -137,8 +137,8 @@
 
             <h3 class="card-text cursive-font">Bubbles</h3>
             <p class="offer-text">
-              With a wide variety in bubbles, im well versed and ready to assit
-              with you brunch or any celebration.
+              With a wide variety in bubbles, i'm well versed and ready to assit
+              with your brunch or any celebration.
             </p>
             <!-- <div class="btn-container">
               <a class="btn project-btn" href="/comingSoon.html"> View </a>
@@ -212,7 +212,7 @@
             <h3 class="card-text cursive-font">Parties</h3>
             <p class="offer-text">
               Crafy and ready to take your party to the next level? Well i'm
-              here to help elevate your party and make sure your guest enjoy
+              here to help elevate your party, and make sure your guest enjoy
               thier cocktails.
             </p>
             <div class="btn-container">
@@ -237,12 +237,12 @@
             </div>
             <h3 class="card-text cursive-font">Events</h3>
             <p class="offer-text">
-              Are you hosting a event at a particular location? Well i can
-              definetly ensure the drinks are flowing with a fresh and
-              profenional deminer.
+              Are you hosting a event at a particular location? Well I can
+              definitely ensure the drinks are flowing with a fresh and
+              professional deminer.
             </p>
             <div class="btn-container">
-              <a class="btn project-btn" href="#"> View </a>
+              <a class="btn project-btn" href="#">View</a>
             </div>
           </div>
         </div>
@@ -264,9 +264,9 @@
 
             <h3 class="card-text cursive-font">Personal</h3>
             <p class="offer-text">
-              Love manhattens, but dont like going to the bar? I can come to you
-              and make you all your favortie cocktails. From margaritas to
-              manhattens, i can help.
+              Love manhattans, but dont like going to the bar? I can come to you
+              and make you all your favorite cocktails. From margaritas to
+              manhattens, I can help.
             </p>
             <div class="btn-container">
               <a class="btn project-btn" href="#"> View </a>
