--- a/contact/contact.html
+++ b/contact/contact.html
@@ -58,7 +58,7 @@
           /> -->
           <p class="contact-text">
             Here for your bartending needs. Send me a message about your parties
-            or events, im ready to assit.
+            or events, i'm ready to assit.
           </p>
           <div class="skill-logo-container">
             <img
