--- a/about/about.html
+++ b/about/about.html
@@ -62,9 +62,10 @@
           <p class="about-text">
             Hello i'm Fernando, a crafty mixologist ready to assit with your
             bartending needs. I enjoy making cocktails that push the limits of
-            what it possible and cosidered a drink. I've been bartending for
-            over 10 years and i'm consistently learning new techniques. Alow me
-            to show you some drinks and elevate your perception of a bartender.
+            what is possible and considered a drink. I've been bartending for
+            over 10 years, and i'm consistently learning new techniques. Allow
+            me to show you some drinks and elevate your perception of a
+            bartender.
           </p>
           <div class="social-media">
             <a
