--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
       src="https://kit.fontawesome.com/f30cc13ab0.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+    <link rel="apple-touch-icon" type="image/png" href="/images/favicon.png" />
     <!-- CSS -->
     <link rel="stylesheet" href="/styles.css" />
     <title>Fernando Gamino</title>
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
   </head>
 
   <body>
